--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'com.android.application'
 	id 'org.jetbrains.kotlin.android'
+	id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 
 android {
@@ -20,7 +21,7 @@ android {
 	buildTypes {
 		release {
 			minifyEnabled false
-			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+			proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
 		}
 	}
 	compileOptions {
@@ -50,6 +51,13 @@ dependencies {
 	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 	implementation 'androidx.activity:activity-compose:1.4.0'
+	implementation "io.ktor:ktor-client-core:$ktor_version"
+	implementation "io.ktor:ktor-client-cio:$ktor_version"
+	implementation "io.ktor:ktor-client-auth:$ktor_version"
+	implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
+	implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version"
+	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+	implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
