--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
 		vectorDrawables {
 			useSupportLibrary true
 		}
+		buildConfigField "String", "API_GATEWAY_URL", "\"$gateway_url\""
 	}
 	buildTypes {
 		release {
@@ -46,11 +47,20 @@ android {
 
 dependencies {
 	implementation 'androidx.core:core-ktx:1.7.0'
+	implementation "androidx.fragment:fragment-ktx:1.4.1"
+	implementation "androidx.activity:activity-compose:1.4.0"
+	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+	implementation 'androidx.navigation:navigation-runtime-ktx:2.4.2'
+	implementation "androidx.navigation:navigation-compose:2.4.2"
 	implementation "androidx.compose.ui:ui:$compose_version"
 	implementation "androidx.compose.material:material:$compose_version"
 	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-	implementation 'androidx.activity:activity-compose:1.4.0'
+	implementation "androidx.compose.runtime:runtime:$compose_version"
+	implementation "androidx.compose.foundation:foundation:$compose_version"
+	implementation "androidx.compose.foundation:foundation-layout:$compose_version"
+	implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+	implementation "androidx.compose.material:material-icons-extended:$compose_version"
+	implementation 'com.google.android.material:material:1.5.0'
 	implementation "io.ktor:ktor-client-core:$ktor_version"
 	implementation "io.ktor:ktor-client-cio:$ktor_version"
 	implementation "io.ktor:ktor-client-auth:$ktor_version"
