--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,12 +46,19 @@ android {
 }
 
 dependencies {
+	def nav_version = "2.4.2"
+	def ktor_version = "2.0.0"
 	implementation 'androidx.core:core-ktx:1.7.0'
 	implementation "androidx.fragment:fragment-ktx:1.4.1"
 	implementation "androidx.activity:activity-compose:1.4.0"
 	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-	implementation 'androidx.navigation:navigation-runtime-ktx:2.4.2'
-	implementation "androidx.navigation:navigation-compose:2.4.2"
+	implementation "androidx.navigation:navigation-fragment:$nav_version"
+	implementation "androidx.navigation:navigation-ui:$nav_version"
+	implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+	implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+	implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+	implementation "androidx.navigation:navigation-compose:$nav_version"
+	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
 	implementation "androidx.compose.ui:ui:$compose_version"
 	implementation "androidx.compose.material:material:$compose_version"
 	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -72,5 +79,6 @@ dependencies {
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 	androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+	androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 	debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
