--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 dependencies {
 	def nav_version = "2.4.2"
 	def ktor_version = "2.0.0"
+	def accompanist_version = "0.23.1"
 	implementation 'androidx.core:core-ktx:1.7.0'
 	implementation "androidx.fragment:fragment-ktx:1.4.1"
 	implementation "androidx.activity:activity-compose:1.4.0"
@@ -68,6 +69,8 @@ dependencies {
 	implementation "androidx.compose.foundation:foundation-layout:$compose_version"
 	implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 	implementation "androidx.compose.material:material-icons-extended:$compose_version"
+	implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
+	implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
 	implementation 'com.google.android.material:material:1.6.0'
 	implementation "com.google.android.gms:play-services-auth:20.2.0"
 	implementation "io.ktor:ktor-client-core:$ktor_version"
@@ -77,10 +80,17 @@ dependencies {
 	implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version"
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 	implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
+	implementation "io.coil-kt:coil-compose:2.0.0"
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 	androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 	androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 	debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+	kotlinOptions {
+		freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
+	}
 }
