--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
 			useSupportLibrary true
 		}
 		buildConfigField "String", "API_GATEWAY_URL", "\"$gateway_url\""
+		buildConfigField "String", "CLIENT_URL", "\"$client_url\""
 	}
 	buildTypes {
 		release {
@@ -76,11 +77,13 @@ dependencies {
 	implementation "io.ktor:ktor-client-core:$ktor_version"
 	implementation "io.ktor:ktor-client-cio:$ktor_version"
 	implementation "io.ktor:ktor-client-auth:$ktor_version"
+	implementation "io.ktor:ktor-client-logging:$ktor_version"
 	implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
 	implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version"
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 	implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
 	implementation "io.coil-kt:coil-compose:2.0.0"
+	implementation "ch.qos.logback:logback-classic:1.2.11"
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
