--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 gateway_url=https://api-gateway-taass-acontenti.cloud.okteto.net
+client_url=https://creative-hub-client-taass-acontenti.cloud.okteto.net
