--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,20 +55,21 @@ dependencies {
 	implementation "androidx.fragment:fragment-ktx:1.4.1"
 	implementation "androidx.activity:activity-compose:1.4.0"
 	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+	implementation "androidx.paging:paging-compose:1.0.0-alpha14"
+	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
 	implementation "androidx.navigation:navigation-fragment:$nav_version"
 	implementation "androidx.navigation:navigation-ui:$nav_version"
 	implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 	implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 	implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 	implementation "androidx.navigation:navigation-compose:$nav_version"
-	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
-	implementation "androidx.compose.ui:ui:$compose_version"
-	implementation "androidx.compose.material:material:$compose_version"
-	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 	implementation "androidx.compose.runtime:runtime:$compose_version"
+	implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 	implementation "androidx.compose.foundation:foundation:$compose_version"
 	implementation "androidx.compose.foundation:foundation-layout:$compose_version"
-	implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+	implementation "androidx.compose.ui:ui:$compose_version"
+	implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+	implementation "androidx.compose.material:material:$compose_version"
 	implementation "androidx.compose.material:material-icons-extended:$compose_version"
 	implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
