--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 	implementation "androidx.activity:activity-compose:1.4.0"
 	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 	implementation "androidx.paging:paging-compose:1.0.0-alpha14"
-	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
+	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 	implementation "androidx.navigation:navigation-fragment:$nav_version"
 	implementation "androidx.navigation:navigation-ui:$nav_version"
 	implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -73,8 +73,10 @@ dependencies {
 	implementation "androidx.compose.material:material-icons-extended:$compose_version"
 	implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
-	implementation 'com.google.android.material:material:1.6.0'
+	implementation "com.google.maps.android:maps-compose:2.1.1"
+	implementation "com.google.android.material:material:1.6.0"
 	implementation "com.google.android.gms:play-services-auth:20.2.0"
+	implementation "com.google.android.gms:play-services-maps:18.0.2"
 	implementation "io.ktor:ktor-client-core:$ktor_version"
 	implementation "io.ktor:ktor-client-cio:$ktor_version"
 	implementation "io.ktor:ktor-client-auth:$ktor_version"
