--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,13 @@ android {
 dependencies {
 	def nav_version = "2.4.2"
 	def ktor_version = "2.0.0"
+	def activity_version = "1.4.0"
 	def accompanist_version = "0.23.1"
 	implementation 'androidx.core:core-ktx:1.7.0'
 	implementation "androidx.fragment:fragment-ktx:1.4.1"
-	implementation "androidx.activity:activity-compose:1.4.0"
+	implementation "androidx.activity:activity-compose:$activity_version"
+	implementation "androidx.activity:activity-ktx:$activity_version"
+	implementation "androidx.activity:activity:$activity_version"
 	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 	implementation "androidx.paging:paging-compose:1.0.0-alpha14"
 	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
@@ -73,10 +76,8 @@ dependencies {
 	implementation "androidx.compose.material:material-icons-extended:$compose_version"
 	implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
-	implementation "com.google.maps.android:maps-compose:2.1.1"
 	implementation "com.google.android.material:material:1.6.0"
 	implementation "com.google.android.gms:play-services-auth:20.2.0"
-	implementation "com.google.android.gms:play-services-maps:18.0.2"
 	implementation "io.ktor:ktor-client-core:$ktor_version"
 	implementation "io.ktor:ktor-client-cio:$ktor_version"
 	implementation "io.ktor:ktor-client-auth:$ktor_version"
