--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
 	implementation "androidx.compose.material:material-icons-extended:$compose_version"
 	implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
+	implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+	implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 	implementation "com.google.android.material:material:1.6.0"
 	implementation "com.google.android.gms:play-services-auth:20.2.0"
 	implementation "io.ktor:ktor-client-core:$ktor_version"
