--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
 	implementation "com.google.accompanist:accompanist-placeholder-material:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
+	implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
 	implementation "com.google.android.material:material:1.6.0"
 	implementation "com.google.android.gms:play-services-auth:20.2.0"
 	implementation "io.ktor:ktor-client-core:$ktor_version"
