--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,8 @@ dependencies {
 	implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
 	implementation "io.coil-kt:coil-compose:2.0.0"
 	implementation "ch.qos.logback:logback-classic:1.2.11"
+	implementation "com.halilibo.compose-richtext:richtext-ui-material:0.11.0"
+	implementation "com.halilibo.compose-richtext:richtext-commonmark:0.11.0"
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
