Implemented Google maps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
 		android:roundIcon="@mipmap/ic_launcher"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.CreativeHub">
-
+		<meta-data android:name="com.google.android.geo.API_KEY"
+			android:value="${MAPS_API_KEY}"
+			/>
 		<activity
 			android:name=".MainActivity"
 			android:exported="true"
