--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'com.android.application'
 	id 'org.jetbrains.kotlin.android'
 	id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
+	id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 
@@ -53,7 +54,7 @@ dependencies {
 	def ktor_version = "2.0.0"
 	def activity_version = "1.4.0"
 	def accompanist_version = "0.23.1"
-	implementation 'androidx.core:core-ktx:1.7.0'
+	implementation 'androidx.core:core-ktx:1.8.0'
 	implementation "androidx.fragment:fragment-ktx:1.4.1"
 	implementation "androidx.activity:activity-compose:$activity_version"
 	implementation "androidx.activity:activity-ktx:$activity_version"
@@ -80,7 +81,7 @@ dependencies {
 	implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
 	implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
-	implementation "com.google.android.material:material:1.6.0"
+	implementation "com.google.android.material:material:1.6.1"
 	implementation "com.google.android.gms:play-services-auth:20.2.0"
 	implementation "io.ktor:ktor-client-core:$ktor_version"
 	implementation "io.ktor:ktor-client-cio:$ktor_version"
@@ -91,7 +92,11 @@ dependencies {
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 	implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
 	implementation "io.coil-kt:coil-compose:2.0.0"
-	implementation "ch.qos.logback:logback-classic:1.2.11"
+	implementation "com.google.maps.android:maps-compose:2.1.1"
+	implementation 'com.google.android.gms:play-services-maps:18.0.2'
+	implementation("androidx.compose.runtime:runtime:1.2.0-alpha08")
+	implementation("androidx.compose.runtime:runtime-livedata:1.2.0-alpha08")
+	implementation("androidx.compose.runtime:runtime-rxjava2:1.2.0-alpha08")
 	testImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
