--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 gateway_url=https://api-gateway-taass-alessiofamiani.cloud.okteto.net
 client_url=https://creative-hub-client-taass-alessiofamiani.cloud.okteto.net
+#MAPS_API_KEY=AIzaSyAbVsiSebFkwgvszM2-2SEnEpr3zaZr8yk
