--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,12 +54,12 @@ dependencies {
 	def ktor_version = "2.0.0"
 	def activity_version = "1.4.0"
 	def accompanist_version = "0.23.1"
-	implementation 'androidx.core:core-ktx:1.8.0'
+	implementation "androidx.core:core-ktx:1.8.0"
 	implementation "androidx.fragment:fragment-ktx:1.4.1"
 	implementation "androidx.activity:activity-compose:$activity_version"
 	implementation "androidx.activity:activity-ktx:$activity_version"
 	implementation "androidx.activity:activity:$activity_version"
-	implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+	implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 	implementation "androidx.paging:paging-compose:1.0.0-alpha14"
 	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 	implementation "androidx.navigation:navigation-fragment:$nav_version"
@@ -83,6 +83,8 @@ dependencies {
 	implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
 	implementation "com.google.android.material:material:1.6.1"
 	implementation "com.google.android.gms:play-services-auth:20.2.0"
+	implementation "com.google.android.gms:play-services-maps:18.0.2"
+	implementation "com.google.maps.android:maps-compose:1.2.0"
 	implementation "io.ktor:ktor-client-core:$ktor_version"
 	implementation "io.ktor:ktor-client-cio:$ktor_version"
 	implementation "io.ktor:ktor-client-auth:$ktor_version"
@@ -92,17 +94,12 @@ dependencies {
 	implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 	implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
 	implementation "io.coil-kt:coil-compose:2.0.0"
-	implementation "com.google.maps.android:maps-compose:2.1.1"
-	implementation 'com.google.android.gms:play-services-maps:18.0.2'
-	implementation("androidx.compose.runtime:runtime:1.2.0-alpha08")
-	implementation("androidx.compose.runtime:runtime-livedata:1.2.0-alpha08")
-	implementation("androidx.compose.runtime:runtime-rxjava2:1.2.0-alpha08")
 	implementation "ch.qos.logback:logback-classic:1.2.11"
 	implementation "com.halilibo.compose-richtext:richtext-ui-material:0.11.0"
 	implementation "com.halilibo.compose-richtext:richtext-commonmark:0.11.0"
-	testImplementation 'junit:junit:4.13.2'
-	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+	testImplementation "junit:junit:4.13.2"
+	androidTestImplementation "androidx.test.ext:junit:1.1.3"
+	androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 	androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 	androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 	debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
