--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,24 +12,18 @@
 		android:roundIcon="@mipmap/ic_launcher"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.CreativeHub">
-		<meta-data android:name="com.google.android.geo.API_KEY"
-			android:value="@string/maps_api_key"
-			/>
+		<meta-data
+			android:name="com.google.android.geo.API_KEY"
+			android:value="@string/maps_api_key" />
 		<activity
 			android:name=".MainActivity"
 			android:exported="true"
 			android:theme="@style/Theme.CreativeHub">
-
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
-
 				<category android:name="android.intent.category.LAUNCHER" />
-
-
 			</intent-filter>
-
 		</activity>
-
 	</application>
 
 </manifest>
