--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 	implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 	implementation "androidx.paging:paging-compose:1.0.0-alpha14"
 	implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+	implementation "androidx.datastore:datastore-preferences:1.0.0"
 	implementation "androidx.navigation:navigation-fragment:$nav_version"
 	implementation "androidx.navigation:navigation-ui:$nav_version"
 	implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -95,6 +96,7 @@ dependencies {
 	implementation "ch.qos.logback:logback-classic:1.2.11"
 	implementation "com.halilibo.compose-richtext:richtext-ui-material:0.11.0"
 	implementation "com.halilibo.compose-richtext:richtext-commonmark:0.11.0"
+	implementation "com.auth0.android:jwtdecode:2.0.1"
 	testImplementation "junit:junit:4.13.2"
 	androidTestImplementation "androidx.test.ext:junit:1.1.3"
 	androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
